refactor: enhance BearerTokenResult with missing scope/role/group tracking and builder pattern
Major API improvements:
- Change BearerTokenResult to track missing scopes/roles/groups instead of expected ones
- Add builder pattern for cleaner BearerTokenResult construction
- Use AccessTokenContent.determineMissing* methods for accurate missing requirement detection
- Update BearerTokenStatus to report only missing values in OAuth-compliant error responses
- Simplify BearerTokenProducer logic by leveraging determineMissing methods

API Changes:
- BearerTokenResult.getMissingScopes/Roles/Groups() replace getRequiredScopes/Roles/Groups()
- BearerTokenResult.builder() provides fluent construction API
- BearerTokenStatus creates WWW-Authenticate headers with actual missing requirements
- BearerTokenResult.constraintViolation() now expects Sets of missing values

Implementation:
- Remove redundant validateRequirements() method
- Leverage determineMissingScopes/Roles/Groups() from AccessTokenContent
- Maintain backward compatibility for static factory methods
- All 173 tests pass with updated assertions

Benefits:
- More accurate OAuth error responses showing exactly what's missing
- Cleaner code using determineMissing* methods from core validation library
- Better API consistency with Optional patterns
- Enhanced developer experience with builder pattern

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>